# GNN-Computing

./: CMakeLists.txt  README.md  util.py
Figure10/: draw_fig10a.py  draw_fig10b.py  main_a.cu  main_b.cu  run.sh
Figure11/: draw_fig11.py  main.cu  run.sh
Figure7/: dgl_prof.py  draw_fig7.py  kernel.cpp  kernel_generated.cu  main.cu  our.py  pyg.py  run.sh  run_dgl.sh  run_our.sh  run_pyg.sh
Figure8/: draw_fig8.py  main.cu  run.sh
Figure9/: dgl_prof_gcn.py  draw_fig9.py  main.cu  run.sh
include/: aggr_gat.h  aggr_gcn.h  aggr_nn.h  aggr_sddmm.h  aggregator.h  data.h  dbg.h  dense.h  graph_schedule.h  sample.h  spmm.h  util.h
script/: cluster2.py
src/: data.cu  util.cu
